--- a/JacksonsBookStore/Views/Shared/_Layout.cshtml
+++ b/JacksonsBookStore/Views/Shared/_Layout.cshtml
@@ -34,7 +34,7 @@
                                 Content Management
                             </a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <a class="dropdown-item" href="#">Action</a>
+                                <a class="nav-link" asp-area="Admin" asp-controller="Category" asp-action="Index">Category</a>
                                 <a class="dropdown-item" href="#">Another Action</a>
                                 <div class="dropdown-divider"></div>
                                 <a class="dropdown-item" href="#">Something else here</a>
