--- a/JacksonsBookStore/Areas/Admin/Views/Product/Index.cshtml
+++ b/JacksonsBookStore/Areas/Admin/Views/Product/Index.cshtml
@@ -1,13 +1,13 @@
-﻿@{
+﻿@@{
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 <br />
 <div class="row">
     <div class="col-6">
-        <h2 class="text-primary">Cover Type List </h2>
+        <h2 class="text-primary">Category List </h2>
     </div>
     <div class="col-6 text-right">
-        <a class="btn btn-primary" asp-action="Upsert"><i class="fas fa-plus"></i> &nbsp; Create New Cover Type</a>
+        <a class="btn btn-primary" asp-action="Upsert"><i class="fas fa-plus"></i> &nbsp; Create New Category</a>
     </div>
 </div>
 
@@ -16,7 +16,11 @@
     <table id="tblData" class="table table-striped table-bordered" style="width:100%">
         <thead class="thead-dark">
             <tr class="table-info">
-                <th>Name</th>
+                <th>Title</th>
+                <th>ISBN</th>
+                <th>Price</th>
+                <th>Author</th>
+                <th>Category</th>
                 <th></th>
             </tr>
         </thead>
@@ -33,5 +37,5 @@
 </div>
 
 @section Scripts{
-    <script src="~/js/coverType.js"></script>
+    <script src="~/js/product.js"></script>
 }
