--- a/JacksonsBookStore/Views/Shared/_Layout.cshtml
+++ b/JacksonsBookStore/Views/Shared/_Layout.cshtml
@@ -29,7 +29,12 @@
                         <li class="nav-item">
                             <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
-                        <a class="nav-link" asp-area="Admin" asp-controller="CoverType" asp-action="Index">Cover Types</a>
+                        <li class="nav-item">
+                            <a class="nav-link" asp-area="Admin" asp-controller="CoverType" asp-action="Index">Cover Types</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" asp-area="Admin" asp-controller="Product" asp-action="Index">Product</a>
+                        </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 Content Management
